--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "seti-ui",
+  "name": "seti-eighties-ui",
   "theme": "ui",
   "version": "0.7.1",
   "description": "A dark colored UI theme for Atom with custom file icons.",
   "license": "MIT",
-  "repository": "https://github.com/jesseweed/seti-ui",
+  "repository": "https://github.com/justo/seti-ui",
   "engines": {
     "atom": ">0.99.0"
   }
