--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.7.1",
   "description": "A dark colored UI theme for Atom with custom file icons.",
   "license": "MIT",
-  "repository": "https://github.com/justo/seti-ui",
+  "repository": "https://github.com/justo/seti-eighties-ui",
   "engines": {
     "atom": ">0.99.0"
   }
