--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "seti-eighties-ui",
   "theme": "ui",
-  "version": "0.7.1",
-  "description": "A dark colored UI theme for Atom with custom file icons.",
+  "version": "0.0.0",
+  "description": "Lower-contrast version of Seti UI.",
   "license": "MIT",
   "repository": "https://github.com/justo/seti-eighties-ui",
   "engines": {
